*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -2,15 +2,33 @@
 <html>
 <head>
 <title>cfs-el</title>
-<meta http-equiv="Refresh"
-	  content="1;
-URL=http://savannah.nongnu.org/projects/cfs-el">
-<link rev="made" href="mailto:marc0@autistici.org">
+<style type="text/css">
+
+body {
+  background:#000000;
+  color: #cccccc;
+  font-family: fixed;
+  font-size: 12pt;
+}
+ 
+a { color: #aaaabb }
+
+a:hover { color:#ffffff; }
+
+</style>
 </head>
 <body>
 <h1>cfs-el</h1>
-<p>
-You should momentarily be redirected to <a href="http://savannah.nongnu.org/projects/cfs-el">http://savannah.nongnu.org/projects/cfs-el</a>.
-</p>
+
+<p>This project is not part of the GNU Project.
+
+<p>This project is not part of Emacs.
+
+<p>cfs-el is a frontend for using CFS (Criptographic File System) from Emacs.
+
+<p>See the <a href="http://savannah.nongnu.org/projects/cfs-el">Project
+page on Savannah</a> for more informations, news, downloads, contact
+and support.
+
 </body>
 </html>
