*** empty log message ***

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ a:hover { color:#ffffff; }
 
 <p>cfs-el is a frontend for using CFS (Criptographic File System) from Emacs.
 
-<p>See the <a href="http://savannah.nongnu.org/projects/cfs-el">Project
-page on Savannah</a> for more informations, news, downloads, contact
-and support.
+<p>See the Project page on Savannah
+(<a href="http://savannah.nongnu.org/projects/cfs-el">http://savannah.nongnu.org/projects/cfs-el</a>)
+for more informations, news, downloads, contact and support.
 
 </body>
 </html>
