*** empty log message ***

--- a/cfs-el.html
+++ b/cfs-el.html
@@ -16,9 +16,8 @@
 <H4>Table of Contents</H4>
 <UL>
   <LI><A HREF="#introduction" NAME="TOCintroduction">Introduction to GNU cfs-el</A>
-<!--
+
   <LI><A HREF="#downloading" NAME="TOCdownloading">Downloading GNU cfs-el</A>
--->
 
   <LI><A HREF="#development" NAME="TOCdevelopment">Development of GNU cfs-el</A>
 </UL>
@@ -36,17 +35,15 @@ CFS (Criptographic File System) from Emacs.
 <p>GNU cfs-el is part of the GNU Project, released under the aegis of
 GNU.
 
-<!--
 <P>
 <H4><A HREF="#TOCdownloading" NAME="downloading">Downloading GNU cfs-el</A></H4>
 <P>
 GNU cfs-el can be found on <A
         HREF="http://ftp.gnu.org/gnu/cfs-el/">http://ftp.gnu.org/gnu/cfs-el/ [via
         HTTP]</A>  and <A
-        HREF="http://ftp.gnu.org/gnu/cfs-el/">http://ftp.gnu.org/gnu/cfs-el/ [via
+        HREF="ftp://ftp.gnu.org/gnu/cfs-el/">ftp://ftp.gnu.org/gnu/cfs-el/ [via
         FTP]</a>.  It can also be found on one of <A
         HREF="/prep/ftp.html">our FTP mirrors</A>.
--->
 
 <P>
 
@@ -84,7 +81,7 @@ permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2003/08/27 22:20:08 $ $Author: marco_p $
+$Date: 2003/10/13 22:47:01 $ $Author: marco_p $
 <!-- timestamp end -->
 <HR>
 </BODY>
