Added link to the manual.

--- a/cfs-el.html
+++ b/cfs-el.html
@@ -19,6 +19,8 @@
 
   <LI><A HREF="#downloading" NAME="TOCdownloading">Downloading GNU cfs-el</A>
 
+  <LI><A HREF="#help" NAME="TOChelp">Getting help with GNU cfs-el</A>
+
   <LI><A HREF="#development" NAME="TOCdevelopment">Development of GNU cfs-el</A>
 </UL>
 
@@ -44,6 +46,12 @@ GNU cfs-el can be found on <A
         HREF="ftp://ftp.gnu.org/gnu/cfs-el/">ftp://ftp.gnu.org/gnu/cfs-el/ [via
         FTP]</a>.  It can also be found on one of <A
         HREF="/prep/ftp.html">our FTP mirrors</A>.
+
+<P>
+
+<H4><A HREF="#TOChelp" NAME="help">Getting help with GNU cfs-el</A></H4>
+
+<P>The manual is <a href="manual/cfs-el.html">avaiable online</a>.
 
 <P>
 
@@ -81,7 +89,7 @@ permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2003/10/13 22:47:01 $ $Author: marco_p $
+$Date: 2003/10/22 00:08:20 $ $Author: marco_p $
 <!-- timestamp end -->
 <HR>
 </BODY>
