Added more informations about CFS.

--- a/cfs-el.html
+++ b/cfs-el.html
@@ -30,7 +30,8 @@
 <H4><A HREF="#TOCintroduction" NAME="introduction">Introduction to GNU cfs-el</A></H4>
 
 <p>This is a web page about GNU cfs-el, which is a frontend for using
-CFS (Criptographic File System) from Emacs.
+CFS (Criptographic File System - wrote by Matt Blaze - distributed by
+Debian too) from Emacs.
 
 <p>GNU cfs-el is not part of GNU Emacs.
 
@@ -90,7 +91,7 @@ permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2003/11/20 14:26:34 $ $Author: marco_p $
+$Date: 2003/11/22 14:35:46 $ $Author: marco_p $
 <!-- timestamp end -->
 <HR>
 </BODY>
