*** empty log message ***

--- a/cfs-el.html
+++ b/cfs-el.html
@@ -38,6 +38,9 @@ Debian too) from Emacs.
 <p>GNU cfs-el is part of the GNU Project, released under the aegis of
 GNU.
 
+<p><b>UPDATE: GNU cfs-el is unmaintained. Please contact the GNU project to apply for maintaining it.</b>
+
+
 <P>
 <H4><A HREF="#TOCdownloading" NAME="downloading">Downloading GNU cfs-el</A></H4>
 <P>
@@ -91,7 +94,7 @@ permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2003/11/22 14:35:46 $ $Author: marco_p $
+$Date: 2006/06/11 16:52:01 $ $Author: marco_p $
 <!-- timestamp end -->
 <HR>
 </BODY>
