--- a/cfs-el.html
+++ b/cfs-el.html
@@ -12,6 +12,7 @@
    WIDTH="129" HEIGHT="122"></A>
 
 <P>
+<HR>
 
 <H4>Table of Contents</H4>
 <UL>
@@ -76,7 +77,7 @@ Return to <A HREF="/home.html">GNU's home page</A>.
 Please send FSF &amp; GNU inquiries &amp; questions to 
 
 <A HREF="mailto:gnu@gnu.org"><EM>gnu@gnu.org</EM></A>.
-There are also <A HREF="/home.html#ContactInfo">other ways to
+There are also <A HREF="http://www.fsf.org/about/contact.html">other ways to
 contact</A> the FSF.
 <P>
 
@@ -86,15 +87,15 @@ Please send comments on these web pages to
 send other questions to
 <A HREF="mailto:gnu@gnu.org"><EM>gnu@gnu.org</EM></A>.
 <P>
-Copyright (C) 2001 Free Software Foundation, Inc.,
-59 Temple Place - Suite 330, Boston, MA  02111,  USA
+Copyright &copy; 2001, 2003, 2006 Free Software Foundation, Inc.,
+51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,  USA
 <P>
 Verbatim copying and distribution of this entire article is
 permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2006/06/11 16:52:01 $ $Author: marco_p $
+$Date: 2006/11/20 09:26:48 $ $Author: ramprasadb $
 <!-- timestamp end -->
 <HR>
 </BODY>
