Updated the page

--- a/manual/cfs-el.html
+++ b/manual/cfs-el.html
@@ -3,9 +3,7 @@
 <title>GNU cfs-el Manual - Table of Contents - GNU Project - Free Software Foundation (FSF)</title><link rev="made" href="mailto:webmasters@www.gnu.org"></head>
 
 <body bgcolor="#ffffff" text="#000000" link="#1f00ff" alink="#ff0000" vlink="#9900dd">
-<h1>GNU cfs-el Manual - Table of Contents</h1>
-<address>Free Software Foundation</address>
-<address>last updated October 22, 2003</address>
+<h1>GNU cfs-el Manual</h1>
 <p>
 <a href="http://www.gnu.org/graphics/gnu-head-sm.jpg"><img src="http://www.gnu.org/graphics/gnu-head-sm.jpg" alt=" [image of the Head of a GNU] " width="129" height="122"> (jpeg 7k)</a>
 <a href="http://www.gnu.org/graphics/gnu-head.jpg">(jpeg 21k)</a>
@@ -43,18 +41,27 @@ This manual is available in the following formats:
 
 Return to <a href="http://www.gnu.org/home.html">GNU's home page</a>.
 <p>
-FSF &amp; GNU inquiries &amp; questions to
+Please send FSF &amp; GNU inquiries &amp; questions to
 <a href="mailto:gnu@gnu.org"><em>gnu@gnu.org</em></a>.
-Other <a href="http://www.gnu.org/home.html#ContactInfo">ways to contact</a> the FSF.
+Other <a href="http://www.fsf.org/about/contact.html">ways to contact</a> the FSF.
 </p><p>
-Comments on these web pages to
+Please send comments on these web pages to
 <a href="mailto:webmasters@www.gnu.org"><em>webmasters@www.gnu.org</em></a>,
 send other questions to
 <a href="mailto:gnu@gnu.org"><em>gnu@gnu.org</em></a>.
 </p><p>
-Copyright (C) 1997, 1998, 2003 Free Software Foundation, Inc.,
-59 Temple Place - Suite 330, Boston, MA  02111,  USA
-</p><p>
+Copyright &copy; 1997, 1998, 2003 Free Software Foundation, Inc.,
+51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,  USA
+</p>
+<p>
 Verbatim copying and distribution of this entire article is
-permitted in any medium, provided this notice is preserved.</p><hr>
+permitted in any medium, provided this notice is preserved.
+</p>
+<P>
+Updated:
+<!-- timestamp start -->
+$Date: 2006/11/20 09:31:49 $ $Author: ramprasadb $
+<!-- timestamp end -->
+</p>
+<hr />
 </body></html>
