--- a/cfs-el.html
+++ b/cfs-el.html
@@ -14,6 +14,10 @@
 <P>
 <HR>
 
+<p>GNU cfs-el was decommissioned in 2007; its mailing lists have been
+disabled, etc.  This web page remains purely for historical
+purposes.</p>
+
 <H4>Table of Contents</H4>
 <UL>
   <LI><A HREF="#introduction" NAME="TOCintroduction">Introduction to GNU cfs-el</A>
@@ -95,7 +99,7 @@ permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2006/11/20 09:26:48 $ $Author: ramprasadb $
+$Date: 2007/09/03 16:25:42 $ $Author: karl $
 <!-- timestamp end -->
 <HR>
 </BODY>
