Rename cfs-el.html to index.html to avoid conflict with cfs-el/ subdir.

--- a/manual/index.html
+++ b/manual/index.html
@@ -60,7 +60,7 @@ permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2006/11/20 09:31:49 $ $Author: ramprasadb $
+$Date: 2019/10/25 09:27:26 $ $Author: th_g $
 <!-- timestamp end -->
 </p>
 <hr />
