Fix https warning; http > https.

--- a/manual/index.html
+++ b/manual/index.html
@@ -5,9 +5,9 @@
 <body bgcolor="#ffffff" text="#000000" link="#1f00ff" alink="#ff0000" vlink="#9900dd">
 <h1>GNU cfs-el Manual</h1>
 <p>
-<a href="http://www.gnu.org/graphics/gnu-head-sm.jpg"><img src="http://www.gnu.org/graphics/gnu-head-sm.jpg" alt=" [image of the Head of a GNU] " width="129" height="122"> (jpeg 7k)</a>
-<a href="http://www.gnu.org/graphics/gnu-head.jpg">(jpeg 21k)</a>
-<a href="http://www.gnu.org/philosophy/gif.html">no gifs due to patent problems</a>
+<a href="/graphics/gnu-head-sm.jpg"><img src="/graphics/gnu-head-sm.jpg" alt=" [image of the Head of a GNU] " width="129" height="122"> (jpeg 7k)</a>
+<a href="/graphics/gnu-head.jpg">(jpeg 21k)</a>
+<a href="/philosophy/gif.html">no gifs due to patent problems</a>
 </p><p>
 </p><p>
 </p><p></p><hr><p>
@@ -39,11 +39,11 @@ This manual is available in the following formats:
 
 </p><hr>
 
-Return to <a href="http://www.gnu.org/home.html">GNU's home page</a>.
+Return to <a href="/home.html">GNU's home page</a>.
 <p>
 Please send FSF &amp; GNU inquiries &amp; questions to
 <a href="mailto:gnu@gnu.org"><em>gnu@gnu.org</em></a>.
-Other <a href="http://www.fsf.org/about/contact.html">ways to contact</a> the FSF.
+Other <a href="https://www.fsf.org/about/contact.html">ways to contact</a> the FSF.
 </p><p>
 Please send comments on these web pages to
 <a href="mailto:webmasters@www.gnu.org"><em>webmasters@www.gnu.org</em></a>,
@@ -60,7 +60,7 @@ permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2019/10/25 09:27:26 $ $Author: th_g $
+$Date: 2019/10/25 09:39:12 $ $Author: th_g $
 <!-- timestamp end -->
 </p>
 <hr />
