--- a/cfs-el.html
+++ b/cfs-el.html
@@ -61,7 +61,7 @@ GNU cfs-el can be found on <A
 
 <H4><A HREF="#TOChelp" NAME="help">Getting help with GNU cfs-el</A></H4>
 
-<P>The manual is <a href="manual/cfs-el.html">avaiable online</a>.
+<P>The manual is <a href="manual/cfs-el.html">available online</a>.
 
 <P>
 
@@ -99,7 +99,7 @@ permitted in any medium, provided this notice is preserved.
 <P>
 Updated:
 <!-- timestamp start -->
-$Date: 2007/09/03 16:25:42 $ $Author: karl $
+$Date: 2020/12/26 14:39:00 $ $Author: th_g $
 <!-- timestamp end -->
 <HR>
 </BODY>
